--- a/angular.json
+++ b/angular.json
@@ -21,6 +21,9 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
+              "src/favicon.ico",
+              "src/assets",
+              "src/app/assets",
               {
                 "glob": "**/*",
                 "input": "public"
@@ -30,10 +33,12 @@
   "node_modules/primeng/resources/themes/lara-light-indigo/theme.css",
   "node_modules/primeng/resources/primeng.min.css",
   "node_modules/primeicons/primeicons.css",
-  "src/styles.css"
+  "src/styles.css",
+             "node_modules/bootstrap/dist/css/bootstrap.min.css"
 ]
 ,
-            "scripts": []
+            "scripts": [  "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -97,5 +102,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "9290fb45-23ad-4253-8b80-ecc2f299e3e2"
   }
 }
