--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@coreui/angular": "^5.3.1",
+    "@coreui/icons": "^3.0.1",
+    "bootstrap": "^5.3.3",
     "chart.js": "^4.4.6",
     "dashboard": "file:",
     "jwt-decode": "^4.0.0",
