--- a/angular.json
+++ b/angular.json
@@ -29,16 +29,17 @@
                 "input": "public"
               }
             ],
-           "styles": [
+ "styles": [
   "node_modules/primeng/resources/themes/lara-light-indigo/theme.css",
   "node_modules/primeng/resources/primeng.min.css",
   "node_modules/primeicons/primeicons.css",
   "src/styles.css",
-             "node_modules/bootstrap/dist/css/bootstrap.min.css"
+  "node_modules/bootstrap/dist/css/bootstrap.min.css"
+],
+"scripts": [
+  "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
 ]
-,
-            "scripts": [  "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
-            ]
+
           },
           "configurations": {
             "production": {
