--- a/package.json
+++ b/package.json
@@ -11,30 +11,29 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^19.0.1",
-    "@angular/cdk": "^18.2.12",
-    "@angular/common": "^19.0.1",
-    "@angular/compiler": "^19.0.1",
-    "@angular/core": "^19.0.1",
-    "@angular/forms": "^19.0.1",
-    "@angular/platform-browser": "^19.0.1",
-    "@angular/platform-browser-dynamic": "^19.0.1",
-    "@angular/router": "^19.0.1",
-    "@coreui/angular": "^5.3.2",
+    "@angular/cdk": "^19.0.3",
+    "@angular/common": "^19.0.4",
+    "@angular/compiler": "^19.0.4",
+    "@angular/core": "^19.0.4",
+    "@angular/forms": "^19.0.4",
+    "@angular/platform-browser": "^19.0.4",
+    "@angular/platform-browser-dynamic": "^19.0.4",
+    "@angular/router": "^19.0.4",
     "@coreui/icons": "^3.0.1",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.6",
     "dashboard": "file:",
     "jwt-decode": "^4.0.0",
     "primeicons": "^7.0.0",
-    "primeng": "^17.18.11",
+    "primeng": "19.0.0-rc.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.0.2",
-    "@angular/cli": "^19.0.2",
-    "@angular/compiler-cli": "^19.0.1",
+    "@angular-devkit/build-angular": "^19.0.4",
+    "@angular/cli": "^19.0.4",
+    "@angular/compiler-cli": "^19.0.4",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
