--- a/angular.json
+++ b/angular.json
@@ -33,21 +33,31 @@
              "node_modules/primeicons/primeicons.css",
              "src/styles.css",
              "node_modules/bootstrap/dist/css/bootstrap.min.css"
-           ]
-,
+           ],
             "scripts": [  "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
             ]
           },
           "configurations": {
             "production": {
               "budgets": [
-              {
-                "type": "initial",
-                "maximumWarning": "2mb",
-                "maximumError": "2.5mb"
-              }
-            ],
-              "outputHashing": "all"
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "2.5mb"
+                }
+              ],
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true
             },
             "development": {
               "optimization": false,
